<?xml version="1.0"?>
<package format="3">
  <name>test_pkg</name>
  <version>0.0.1</version>
  <description>Test package</description>
  <maintainer email="aisha.nasrin@uwrindia.com">aisha</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
